--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -4,7 +4,7 @@
     font-family: $regular; 
     font-style: normal; 
     font-weight: 400; 
-    src: url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
+    src: url('../fonts/Arvo-Regular.ttf');
     src: local('Arvo', serif), local('Arvo Regular'), url('../fonts/Arvo-Regular.ttf') format('truetype');
     font-display: swap; 
     unicode-range: U+000-5FF; /* Latin glyphs */
@@ -15,7 +15,7 @@
     font-family: $regularItalic; 
     font-style: italic; 
     font-weight: 400; 
-    src: url('https://fonts.googleapis.com/css2?family=Arvo:ital@1&display=swap');
+    src: url('../fonts/Arvo-Italic.ttf');
     src: local('Arvo'), local('Arvo Italic'), url('../fonts/Arvo-Italic.ttf') format('truetype');
     font-display: swap; 
     unicode-range: U+000-5FF; /* Latin glyphs */
@@ -25,7 +25,7 @@
     font-family: $bold; 
     font-style: normal; 
     font-weight: 700;
-    src: url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap');
+    src: url('../fonts/Arvo-Bold.ttf');
     src: local('Arvo'), local('Arvo Bold'), url('../fonts/Arvo-Bold.ttf') format('truetype');
     font-display: swap; 
     unicode-range: U+000-5FF; /* Latin glyphs */
